force-app/main/default/objects/Weight_Loss_S__c/Weight_Loss_S__c.object-meta.xml
<CustomObject>
    <label>Weight Loss(S)</label>
    <nameField>
        <label>Weight Loss(S) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weight Loss(S)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>