force-app/main/default/objects/Weight_Loss_S__c/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <label>BMI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>