force-app/main/default/objects/Weight_Loss_S__c/fields/Last_Week_Weight__c.field-meta.xml
<CustomField>
    <fullName>Last_Week_Weight__c</fullName>
    <label>Last Week Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>