force-app/main/default/objects/Weight_Loss_S__c/fields/Starting_Muscle_Mass__c.field-meta.xml
<CustomField>
    <fullName>Starting_Muscle_Mass__c</fullName>
    <label>Starting Muscle Mass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>