force-app/main/default/objects/Weight_Loss_S__c/fields/Starting_weight__c.field-meta.xml
<CustomField>
    <fullName>Starting_weight__c</fullName>
    <label>Starting weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>