force-app/main/default/objects/Weight_Loss_S__c/fields/Todays_Muscle_Mass__c.field-meta.xml
<CustomField>
    <fullName>Todays_Muscle_Mass__c</fullName>
    <label>Todays Muscle Mass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>