force-app/main/default/objects/Weight_Loss_S__c/fields/Todays_Weight__c.field-meta.xml
<CustomField>
    <fullName>Todays_Weight__c</fullName>
    <label>Todays Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>