force-app/main/default/objects/Weight_Loss_S__c/fields/Weight_Loss__c.field-meta.xml
<CustomField>
    <fullName>Weight_Loss__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weight Loss</label>
    <referenceTo>Weight_Loss__c</referenceTo>
    <relationshipLabel>Weight Loss(S)</relationshipLabel>
    <relationshipName>Weight_Loss_S</relationshipName>
    <type>Lookup</type>
</CustomField>