force-app/main/default/objects/Weight_Loss_S__c/fields/Zofran_Prescribed__c.field-meta.xml
<CustomField>
    <fullName>Zofran_Prescribed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zofran Prescribed</label>
    <type>Checkbox</type>
</CustomField>